--- a/roles/couchbaseInstall/vars/main.yml
+++ b/roles/couchbaseInstall/vars/main.yml
@@ -1,4 +1,9 @@
+couchbase_rpm: couchbase-server-enterprise-7.1.4-centos7.x86_64.rpm
+
 sysctl_config:
   vm.swappiness: 0
   net.ipv4.tcp_retries2: 8
   net.ipv4.tcp_keepalive_time: 600
+  
+  
+  
