--- a/roles/couchbaseInstall/tasks/main.yml
+++ b/roles/couchbaseInstall/tasks/main.yml
@@ -1,3 +1,6 @@
+---
+   ##this play install couchbase server as non root user and start servers.
+   
    - name: Change kernel-settings
      sysctl:
        name: '{{ item.key }}'
